--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body{
     width: 100%;
 
     position: absolute;
-    bottom: -50px;
+    bottom: -80px;
     z-index: -1;
 
     display: flex;
@@ -65,9 +65,9 @@ body{
 }
 
 .bubbles span{
-    width: 50px;
-    height: 50px;
-    background-color: rgba(255, 255, 255, 0);
+    width: 60px;
+    height: 60px;
+    background-color: rgba(255, 255, 255, 0.01);
     box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15);
 
     backdrop-filter: blur(5px);
@@ -80,24 +80,31 @@ body{
 
 .bubbles span.one{
     animation-delay: 0s;
+    transform: scale(0.3);
 }
 .bubbles span.two{
     animation-delay: 15s;
+    transform: scale(0.6);
 }
 .bubbles span.three{
     animation-delay: 6s;
+    transform: scale(0.9);
 }
 .bubbles span.four{
-    animation-delay: 12s;
+    animation-delay: 10s;
+    transform: scale(1.2);
 }
 .bubbles span.five{
-    animation-delay: 10s;
+    animation-delay: 14s;
+    transform: scale(1.5);
 }
 .bubbles span.six{
     animation-delay: 8s;
+    transform: scale(1.8);
 }
 .bubbles span.seven{
     animation-delay: 2s;
+    transform: scale(2.1);
 }
 
 @keyframes move {
