--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     height: 100vh;
     width: 100%;
     background-image: linear-gradient( to top right,
-    rgb(233, 46, 64), rgb(46, 199, 255) );
+    rgb(0, 29, 217), rgb(0, 249, 254) );
 
     display: flex;
     align-items: center;
@@ -25,7 +25,7 @@ body{
 
 /* ! styling main-section */
 #main{
-    width: 350px;
+    width: 320px;
     height: 500px;
     border-radius: 7px;
     border-top: 2px solid rgba(255, 255, 255, 0.25);
@@ -35,27 +35,80 @@ body{
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.058);
 
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
+}
+
+#main form{
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 
 .display-container{
-    width: 300px;
+    width: 270px;
     height: 100px;
     border: 2px solid white;
     margin: 10px;
     border-radius: 7px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .button-container{
-    width: 300px;
+    width: 270px;
     height: 300px;
-    border: 2px solid white;
+    /* border: 2px solid white; */
     margin: 10px;
     border-radius: 7px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
+/* ! formating display */
+.display-container input {
 
+    width: 95%;
+    height: 30px;
+    border: 0px solid black;
+    outline: 0px;
+
+    color: white;
+    font-size: 25px;
+
+    text-align: right;
+    background-color: transparent;
+}
+
+/* ! formating buttons  */
+
+.button-container input{
+    width: 60px;
+    height: 60px;
+
+    border-radius: 7px;
+
+    color: white;
+    font-size: 15px;
+
+    background-color: transparent;
+    border: 0px solid black;
+
+    /* transition: 0.1s; */
+}
+.button-container input:hover{
+    background-color: rgba(255, 255, 255, 0.1);
+}
+.button-container input:active{
+    background-color: rgba(255, 255, 255, 0.2);
+}
 
 /* ! animation */
 .bubbles{
