--- a/style.css
+++ b/style.css
@@ -95,15 +95,17 @@ body{
     width: 60px;
     height: 60px;
 
+    margin: 0px 3px 0px 3px;
+
     border-radius: 7px;
 
     color: white;
     font-size: 15px;
 
     background-color: transparent;
-    border: 0px solid black;
+    border: 0px;
 
-    /* transition: 0.1s; */
+    transition: 0.5s;
 }
 .button-container input:hover{
     background-color: rgba(255, 255, 255, 0.1);
